added log of data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+Test bluetooth connection:
 <button (click)=connect()>connect</button>
+
+data:
+<div *ngFor="let value of values">
+    <div>JSON: {{value | json}} </div>
+</div>
